<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background">

        <ImageView
            android:id="@+id/img_article_photo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerInside"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_article_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_article_photo"
            android:textSize="22sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_article_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_article_photo"
            tools:text="@string/herbalName"/>

        <TextView
            android:id="@+id/tv_article_composition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toTopOf="@+id/imageButton2"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_article_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_article_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_article_name"
            tools:text="@string/herbalIngredients" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/baseline_favorite_border_24"
            card_view:layout_constraintBottom_toBottomOf="@id/img_article_photo"
            card_view:layout_constraintStart_toStartOf="@+id/tv_article_composition"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_article_composition"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/viewDetail"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            card_view:layout_constraintEnd_toEndOf="@id/tv_article_composition"
            card_view:layout_constraintStart_toEndOf="@id/imageButton2"
            card_view:layout_constraintTop_toTopOf="@+id/imageButton2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>